Duchamp version 1.1.8 (2009/??/??)
----------------------------------

Improvements:

* The FDR method involves calculating how many pixels are
  correlated. This previously involved multiplying the beam area by 2,
  implying that 2 neighbouring channels were correlated. This factor
  is now a user-selectable parameter, so that if you know how many
  spectral channels should be correlated, you can set the parameter
  FDRnumCorChan and the FDR calculation will be done correctly.

* Screen output now has more information on the growing threshold when
  the cube statistics are printed.


Bug fixes:

* The function that grows objects had a major bug, that stopped it
  working when flagAdjacent=false. This has been fixed and should work
  fine.

* All calls to uint were changed to unsigned int, as some compilers
  had problems recognising that they were the same thing.

* src/fitsHeader.cc was missing an include statement for stdlib.h,
  again causing some compilers to fail.


Duchamp version 1.1.7 (2009/01/16)
----------------------------------

Improvements:

* The mask file that can be created with flagMask can now specify
  which object a given detected pixel belongs to, by taking the object
  ID as its value. This applies if you set flagMaskWithObjectNum=true
  (it defaults to false, which means each detected pixel has the value
  1). Non-detected pixels still have the value 0.

* The names of the output FITS files are now able to be specified
  directly by input parameters. These will override the default names
  that Duchamp provides.

* The Karma annotation file now specifies a font - previously it did
  not and so was at the mercy of whatever was specified in other
  annotation files being viewed at the same time. Please let me know
  if the font I've chosen (lucidasans-12) is not suitable.

* The default flag, used in the absence of 'E', 'S' or 'N', is now '-'
  rather than blank. This will ensure that each column in the results
  file has something in it.
