@@ -338,7 +338,7 @@ not matter, they are grouped here in logical sections.
 \item[{sortingParam [vel]}] The parameter on which to sort the output
   list of detected objects. Options are: x-value, y-value, z-value,
   ra, dec, vel, w50, iflux,  pflux (integrated and peak flux
-  respectively), or SNR. 
+  respectively), or snr. 
 \item[{drawBorders [true]}] A flag indicating whether to draw
   borders around the detected objects in the moment maps included in
   the output (see for example Fig.~\ref{fig-spect}).
