@@ -91,7 +91,7 @@ the first place. Once the detection list is finalised, it is sorted
 according to the value of the \texttt{sortingParam}. This can take the
 value ``x-value'', ``y-value'', ``z-value'', ``ra'', ``dec'', ``vel'',
 ``w50'', ``iflux'' (for integrated flux), or ``pflux'' (for peak
-flux), or ``SNR''. The default value is ``vel''. If no good WCS
+flux), or ``snr''. The default value is ``vel''. If no good WCS
 exists, the mean pixel position equivalent is used (``ra'' is replaced
 by ``x-value'', ``dec'' by ``y-value'', ``vel'' and ``w50'' by
 ``z-value''). The results are then printed to the screen and to the
